--- a/lib/modules/people-pages/views/indexAjax.html
+++ b/lib/modules/people-pages/views/indexAjax.html
@@ -23,5 +23,5 @@
 {# Load More button. Also outside data-apos-ajax-append, so it gets refreshed #}
 {% if data.currentPage < data.totalPages %}
     {# "Load More" button with the "append=1" flag #}
-    <a data-apos-ajax-infinite-scroll href="{{ data.url }} | build({ page: data.currentPage + 1, append: 1 })">Load More...</a>
+    <a href="{{ data.url | build({ page: data.currentPage + 1, append: 1 }) }}">Load More...</a>
 {% endif %}
